--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>My Webpage</title>
-  <meta charset="utf-8">
-</head>
+<html>
 <body>
-apples
+
+<h1 style="border: 2px solid Mediumseagreen;">Hello World</h1>
+
+<p style="background-color:mediumseagreen;">
+my name is richard joseph, and this is my website i am creating while i learn how to code. iit will be very basic but i am excited to learn how to code a website froms scratch
+</p>
 
 
 
