--- a/index.html
+++ b/index.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+<title>capstone</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+
+</style>
+</head>
 <body>
 
-<h1 style="border: 2px solid Mediumseagreen;">Hello World</h1>
+<header>
+  <h2>This is my webpage i am creating for FNTC 130</h2>
+</header>
 
-<p style="background-color:mediumseagreen;">
-my name is richard joseph, and this is my website i am creating while i learn how to code. iit will be very basic but i am excited to learn how to code a website froms scratch
-</p>
+<section>
 
+  <nav>
+    <ul>
+      <h1> these are websites i frequent almost daily</h1>
+      <li><a href="https://www.twitch.tv/" target="_blank">twitch.com</a></li>
+      <li><a href="https://www.facebook.com/" target="_blank">facebook.com</a></li>
+      <li><a href="https://www.amazon.ca/" target="_blank">amazon.ca</a></li>
+    </ul>
+  </nav>
 
+  <article>
+    <h1>London</h1>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+  </article>
+</section>
+
+<footer>
+  <p>Footer</p>
+</footer>
 
 </body>
 </html>
