--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <head>
 <title>capstone</title>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
