--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
 
 <header>
-  <h2>This is my webpage i am creating for FNTC 130</h2>
+  <h2>This is <strong>MY</strong> webpage i am creating for FNTC 130</h2>
 </header>
 
 <section>
 
   <nav>
     <ul>
-      <h1> these are websites i frequent almost daily</h1>
+      <h1> these are websites i <em>frequent</em> almost daily</h1>
       <li><a href="https://www.twitch.tv/" target="_blank">twitch.com</a></li>
       <li><a href="https://www.facebook.com/" target="_blank">facebook.com</a></li>
       <li><a href="https://www.amazon.ca/" target="_blank">amazon.ca</a></li>
@@ -28,6 +28,11 @@
     <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
   </article>
 </section>
+
+<a href="https://www.google.ca" target="_blank">Google</a>
+
+<!-- adding images-->
+<img src="images/harrison-steen-dNFzxmv14_Y-unsplash.jpg" alt="buffalo" width="300" height="200"/>
 
 <footer>
   <p>Footer</p>
