--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <a href="https://www.google.ca" target="_blank">Google</a>
 
 <!-- adding images-->
-<img src="buffalopicture.jpg" alt="buffalo" width="300" height="200"/>
+<img src="images/harrison-steen-dNFzxmv14_Y-unsplash.jpg" alt="buffalo" width="300" height="200"/>
 
 <footer>
   <p>Footer</p>
