--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,16 @@
   <link rel="stylesheet" href="style.css";
 </head>
 <body>
-  <!--this is the review of the html boilerplate -->
+  when i found video games, it almost immediately became a way to escape. when i was younger i used to make fun of people who were nerd and played video games all day long. now i find myself doing the exact same thing if i ever get the chance. lol. it all started playing halo at my close friend shamrocks house in Nanaimo. everything at that point was super casual and i would just play to play with my friends. i began buying Xboxes, as that was was the main console my friends all had so i could play with them while i wasn't at their house.
+
+  I started trying to play competitively and i got pretty good at using a controller. it didn't end at the controller, though. i saw some of my friends who played the same game as me on a cross platform game using a keyboard and mouse. I decided i would teach myself how to use them, for when i wanted to transition onto pc gaming. i bought a cheap keyboard and mouse and used them on Xbox for awhile until i saved up enough money to buy a prebuilt pc, just to get my foot in the door. it was the best gaming experience of my life. i wanted to improve on it as i knew the specifications were not where i wanted to be, i knew i could build a better computer if i put my mind to it. i began researching what components were in a personal computer and how they worked. when i put my mind to something i research and research until i have a very good understanding of what I'm learning. i started playing in online tournaments on COD to fund my pc build. slowly but surely i began to win tournaments and buy components piece by piece. I wont go into deep detail about what components do what, but i started with the motherboard and CPU (central processing unit), then went on to buy the ram and power supply, then was the storage and graphics card, then finally the case. this took about 3 months to acquire all the parts and i was looking at around 3000$ in parts for the computer, which if i think about it now its crazy because i would always just buy 400$ consoles and never had a problem doing that until i wanted to get into pc gaming lol.
+
+  I still to this day like to learn about computers and this is why i wanted to join the FNTC programs, so i could get a foot in the door into some tech knowledge. i could credit what i want to learn with computers from my love for online gaming. in this day and age, playing games with friends online definitely is more of a pro than con in my books and teaches you some of the basics you would need to know about technology. for anyone wanting to get into learning about technology, video games has always been a great place to start for me.
+
+<p></P>
+
+<img src="images/keyboard.jpg" alt="keyboard" width="300px" height="200"/>
+<img src="images/warzone.jpg" alt="warzone" width="300px" height="200"/>
+<img src="images/gaming.jpg" alt="gaming" width="300px" height="200"/>
 </body>
 </html>
