--- a/index.html
+++ b/index.html
@@ -7,35 +7,53 @@
 </head>
 <body>
 
+<!-- <div class= "banner"> -->
 <header>
   <h2>This is <strong>MY</strong> webpage i am creating for FNTC 130</h2>
 </header>
+</div>
 
 <section>
 
-  <nav>
-    <ul>
-      <h1> these are websites i <em>frequent</em> almost daily</h1>
-      <li><a href="https://www.twitch.tv/" target="_blank">twitch.com</a></li>
-      <li><a href="https://www.facebook.com/" target="_blank">facebook.com</a></li>
-      <li><a href="https://www.amazon.ca/" target="_blank">amazon.ca</a></li>
-    </ul>
-  </nav>
+<nav>
+ <ul>
+ <p> these are website  i <em>frequent</em> almost daily
+ <li><a href="https://www.twitch.tv/" target="_blank">twitch.com</a></li>
+ <li><a href="https://www.facebook.com/" target="_blank">facebook.com</a></li>
+ <li><a href="https://www.amazon.ca/" target="_blank">amazon.ca</a></li></p>
+ <p><em>hyperlinks to a new tab^^^^^</em></p>
+ </ul>
+</nav>
 
-  <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-  </article>
+<div class="container">
+<article>
+  <h1 class="title">The wild</h1>
+    <p>One thing i love is the outdoors, and seeing animals in the wild doing what they do. i feel like i share a strong connection to the outside world, and i long to go explore places throughout the world
+    The world has so much beauty to offer and i feel like ive spent too long locked up indoors due to the pandemic. Im not to sure what to share on my webpage, so i thought i would share some pictures of
+  some animals i like :) </p>
+</article>
+</div>
 </section>
 
-<a href="https://www.google.ca" target="_blank">Google</a>
+<!-- adding images -->
+<img src="images/owl.jpg" alt="owl" width="300" height="200"/>
+<img src="images/wolf.jpg" alt="wolf" width="300" height="200"/>
+<img src="images/eagle.jpg" alt="eagle" width="300" height="200"/>
+<img src="images/elk.jpg" alt="elk" width="300" height="200"/>
+<img src="images/buffalo.jpg" alt="buffalo" width="300" height="200"/>
 
-<!-- adding images-->
-<img src="images/harrison-steen-dNFzxmv14_Y-unsplash.jpg" alt="buffalo" width="300" height="200"/>
+<p></p>
 
-<footer>
-  <p>Footer</p>
+<p><a href="images/buffalo.jpg"> a buffalo</A></p>
+
+<a href="https://www.google.ca">Google</a>
+<p>^^^This takes you to an external resource ;)</p>
+
+<p></p>
+
+<a href="aboutme.html">***this takes me to my aboutme page***</a>
+<footer id="footer">
+  <p>This website is created by Richard Joseph</p>
 </footer>
 
 </body>
